Feat/st 844: Fixed Sonar issue and remove suppress warnings (#437)
* ST-844: Initial commit

* ST-712 Select recipients

* Changes in progress for Document download using CDAM

* ST-844: Unit Tests added

* ST-844: Fixed few checkstyle issues and tests

* ST-844: Commented as its not needed for now i think

* ST-844: Added missing ccd_document_am url to application yaml file

* ST-844: Added missing ccd_document_am urls to application yaml file

* ST-844: Changes to improve coverage and remove duplications

* ST-844: Issue to fix build issue

* ST-844: Issue to fix build issue 1

* ST-844: Updated the url to point to AAT env

* ST-844: Reverted few changes

* ST-844: Added more config

* ST-844: Removed dependency not used

* ST-844: Removed import

* ST-844: Added config for PR env

* ST-844: Pointed to CDAM AAT env in preview file

* ST-844: Commented to check if there is issue with actuator configuration

* ST-844: Added ccd-case-document-am-api to onPR environment variables

* ST-844: Pointing to AAT env

* ST-844: Removed DocumentManagement from dependency

* ST-844: Repointing to PR url in Jenkinsfile_CNP file

* ST-844: Repointing to PR url in values.preview.template.yaml and also updated logic to attach document as per updated template

* ST-844: corrected the preview url

* ST-844: corrected the preview url

* ST-844: Reverted preview changes

* ST-844: Removed the configuration as they are mistakenly added as part of another PR.

* ST-844: Revert the vaultOverrides change

* ST-844: Revert the vaultOverrides change as suggested by Serkan

* ST-844: Testing with already updated document. This code would be reverted once tested in AAT

* ST-844: Fixed build errors

* ST-844: Added few roles to test if this fixes access issue with CDAM API

* ST-844: Updated token generation logic as we are able to make call in AAT with new tokens.

* ST-844: Updated tests for Sonar coverage

* ST-844: Fixe